# OptiChain-Env

./: .gitignore  Dockerfile  LICENSE  __init__.py  baseline.py  client.py  inference.py  inference_log.txt  inference_log2.txt  inference_log3.txt  inference_log4.txt  locustfile.py  models.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt  test.py
app/: main.py
env/: core.py  schemas.py
server/: app.py
static/: index.html
