[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optichain-env"
version = "1.0.0"
description = "AI-driven supply chain inventory optimization environment for OpenEnv"
requires-python = ">=3.11"
authors = [
    { name = "OptiChain Team" }
]
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "openai>=1.14.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["env", "server", "app"]
package-dir = { "env" = "env", "server" = "server", "app" = "app" }
